--- a/src/Responsive/Tablet-Large Tablet/Tablet.scss
+++ b/src/Responsive/Tablet-Large Tablet/Tablet.scss
@@ -394,4 +394,71 @@
             }
         }
     }
+
+    .login-and-signup-container {
+        .entries-project-logo {
+            top: 25%;
+            left: 10%;
+
+            img {
+                width: 225px;
+                height: 275px;
+            }
+        }
+
+        .entries-container {
+            left: 55%;
+
+            .login-container {
+                .tab {
+                    color: rgba(200, 200, 200);
+                }
+            }
+
+            .login-form {
+                .group {
+                    color: rgba(200, 200, 200);
+
+                    .input-log-sign {
+                        padding: 12px 17px;
+                    }
+
+                    label {
+                        .check-icon {
+                            background: rgba(255, 255, 255, 0.4);
+                        }
+                    }
+                }
+
+                .login-btn {
+                    padding: 12px 17px;
+                }
+            }
+
+            .signup-container {
+                .signup-form {
+                    .group {
+                        color: rgba(200, 200, 200);
+
+                        .input-log-sign {
+                            padding: 12px 17px;
+                        }
+                    }
+
+                    .signup-btn {
+                        padding: 12px 17px;
+                    }
+
+                    .already-member {
+                        margin-left: 35px;
+                    }
+                }
+            }
+
+            .hr {
+                margin: 25px 0 0 1.5rem;
+                background-color: rgba(185, 185, 185);
+            }
+        }
+    }
 }
