--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -449,7 +449,7 @@ section {
           .slick-track {
             >div {
               >div {
-                .product-container {
+                .product-add-container {
                   width: fit-content;
                   height: fit-content;
                   border: 2px solid #000;
@@ -492,7 +492,7 @@ section {
                     font-size: 18px;
                     text-wrap: nowrap;
                     border-radius: 3px;
-                    border: 3px solid #000;
+                    border: 2px solid #000;
                     transition: all 500ms ease-in-out;
 
                     svg {
@@ -1142,6 +1142,7 @@ footer {
         display: inline-block;
         border-bottom: 2px solid transparent;
         text-transform: uppercase;
+        cursor: pointer;
       }
     }
 
@@ -1238,6 +1239,12 @@ footer {
           border-radius: 25px;
           background: rgba(255, 255, 255, .2);
         }
+
+        input {
+          &::placeholder {
+            color: rgba(255, 255, 255, 0.5);
+          }
+        }
       }
 
       .login-btn {
@@ -1308,6 +1315,12 @@ footer {
             border-radius: 25px;
             background: rgba(255, 255, 255, .2);
           }
+
+          input {
+            &::placeholder {
+              color: rgba(255, 255, 255, 0.5);
+            }
+          }
         }
 
         .signup-btn {
@@ -1341,6 +1354,210 @@ footer {
       margin: 40px 0 30px 1.5rem;
       height: 2px;
       background: rgba(255, 255, 255, .2);
+    }
+  }
+}
+
+.product-add-container {
+
+  .product-add-title {
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 3rem;
+  }
+
+  .product {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 3rem;
+    margin-left: 100px;
+    column-gap: 2rem;
+    row-gap: 5rem;
+
+    div {
+
+      label {
+        display: block;
+        margin-bottom: 1rem;
+        font-weight: 600;
+        font-size: 22px;
+      }
+
+      input {
+        font-size: 20px;
+        margin: 0 0 2rem 0;
+        padding: 10px 20px;
+        display: inline-block;
+        border: 1px solid $color1;
+        background: #cacaca;
+        color: $base-color2;
+        border-radius: 10px;
+
+        &::placeholder {
+          color: rgba(0, 0, 0, 0.25);
+        }
+
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+      }
+
+      select {
+        font-size: 17px;
+        background: #cacaca;
+        border: 1px solid $color1;
+        border-radius: 10px;
+        padding: 10px 20px;
+      }
+
+      textarea {
+        margin-bottom: 3rem;
+        resize: none;
+        padding: 7px;
+      }
+    }
+  }
+
+  .add {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+
+    &-photo-btn {
+      cursor: pointer;
+      height: 3rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      margin-top: 1rem;
+      background-color: #004AAC;
+      color: $base-color1;
+      font-size: 22px;
+      text-wrap: nowrap;
+      border-radius: 5px;
+      border: 2px solid #000;
+      transition: all 500ms ease-in-out;
+      gap: 10px;
+
+      .camera-icon {
+        svg {
+          width: 20px;
+          height: 20px;
+          margin-top: 2px;
+          padding: 3px;
+          background-color: $base-color1;
+          color: #004AAC;
+          border-radius: 5px;
+          transition: all 400ms ease-in-out;
+        }
+      }
+
+      &:hover {
+        transform: scale(1.05);
+
+        &::before {
+          animation: shine 1.5s ease-in-out infinite;
+        }
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100px;
+        height: 100%;
+        background-image: linear-gradient(120deg,
+            rgba(255, 255, 255, 0) 30%,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0) 70%);
+        top: 0;
+        left: -100px;
+        opacity: 0.6;
+      }
+
+      @keyframes shine {
+        0% {
+          left: -100px;
+        }
+
+        60% {
+          left: 100%;
+        }
+
+        to {
+          left: 100%;
+        }
+      }
+    }
+
+    &-product-btn {
+      cursor: pointer;
+      height: 2.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 15px 30px;
+      margin-top: 1rem;
+      background-color: #004AAC;
+      color: $base-color1;
+      font-size: 22px;
+      text-wrap: nowrap;
+      border-radius: 5px;
+      border: 2px solid #000;
+      transition: all 500ms ease-in-out;
+      gap: 10px;
+
+      .add-icon {
+        svg {
+          width: 1rem;
+          height: 1rem;
+          margin-bottom: 2px;
+          background-color: none;
+          color: $base-color1;
+          border-radius: 5px;
+          transition: all 400ms ease-in-out;
+        }
+      }
+
+      &:hover {
+        transform: scale(1.05);
+
+        &::before {
+          animation: shine 1.5s ease-in-out infinite;
+        }
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100px;
+        height: 100%;
+        background-image: linear-gradient(120deg,
+            rgba(255, 255, 255, 0) 30%,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0) 70%);
+        top: 0;
+        left: -100px;
+        opacity: 0.6;
+      }
+
+      @keyframes shine {
+        0% {
+          left: -100px;
+        }
+
+        60% {
+          left: 100%;
+        }
+
+        to {
+          left: 100%;
+        }
+      }
     }
   }
 }
