adding-some-contents-responsive

--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -388,4 +388,10 @@
             }
         }
     }
+
+    .product-add-container {
+        label{
+            letter-spacing: 0.5px;
+        }
+    }
 }
