--- a/src/Responsive/Laptop-Desktop/Laptop.scss
+++ b/src/Responsive/Laptop-Desktop/Laptop.scss
@@ -300,7 +300,7 @@
 
         .entries-container {
             top: 15%;
-            
+
             .login-form {
                 .login-btn {
                     margin-top: 20px;
@@ -321,6 +321,43 @@
 
             .hr {
                 margin: 25px 0 0 1.5rem;
+            }
+        }
+    }
+
+    .product-add-container {
+        .product {
+            margin-left: 30px;
+
+            div {
+                label {
+                    font-size: 20px;
+                }
+
+                input {
+                    font-size: 18px;
+                }
+
+                select {
+                    font-size: 15px;
+                }
+            }
+        }
+
+        .add {
+            &-photo-btn {
+                font-size: 20px;
+
+                .camera-icon {
+                    svg {
+                        width: 18px;
+                        height: 18px;
+                    }
+                }
+            }
+
+            &-product-btn {
+                font-size: 22px;
             }
         }
     }
