--- a/src/Responsive/Mobile/Mobile.scss
+++ b/src/Responsive/Mobile/Mobile.scss
@@ -200,13 +200,13 @@
                 margin-left: 0;
                 margin-right: 0;
 
-                h3{
+                h3 {
                     margin-bottom: 2.5rem;
                 }
 
-                &-title{
-                    span{
-                        svg{
+                &-title {
+                    span {
+                        svg {
                             margin-left: 0.5rem;
                         }
                     }
@@ -408,6 +408,61 @@
 
                     .hr {
                         margin: 15px 0 0 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+
+    .product-add-container {
+
+        .product-add-title {
+            font-size: 26px;
+        }
+
+        .product {
+            grid-template-columns: repeat(1, 1fr);
+            margin-left: 2rem;
+            column-gap: 0;
+            row-gap: 2rem;
+
+            div {
+                label {
+                    font-size: 18px;
+                    margin-bottom: 14px;
+                }
+
+                input {
+                    padding: 10px 15px;
+
+                }
+
+                select {
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        .add {
+            gap: 14px;
+
+            &-photo-btn {
+                .camera-icon {
+                    svg {
+                        width: 1rem;
+                        height: 1rem;
+                    }
+                }
+            }
+
+            &-product-btn {
+                font-size: 18px;
+                gap: 4px;
+
+                .add-icon {
+                    svg {
+                        width: 13px;
+                        height: 13px;
                     }
                 }
             }
