--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1358,82 +1358,257 @@ footer {
   }
 }
 
-.product-add-container {
+section {
+  .product-add-container {
 
-  .product-add-title {
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 3rem;
-  }
+    .product-add-title {
+      font-size: 2rem;
+      text-align: center;
+      margin-top: 3rem;
+    }
 
-  .product {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: 3rem;
-    margin-left: 100px;
-    column-gap: 2rem;
-    row-gap: 5rem;
+    .product {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      margin-top: 3rem;
+      margin-left: 100px;
+      column-gap: 2rem;
+      row-gap: 5rem;
 
-    div {
+      div {
 
-      label {
-        display: block;
-        margin-bottom: 1rem;
-        font-weight: 600;
+        label {
+          display: block;
+          margin-bottom: 1rem;
+          font-weight: 600;
+          font-size: 22px;
+        }
+
+        input {
+          font-size: 20px;
+          margin: 0 0 2rem 0;
+          padding: 10px 20px;
+          display: inline-block;
+          border: 1px solid $color1;
+          background: #cacaca;
+          color: $base-color2;
+          border-radius: 10px;
+
+          &::placeholder {
+            color: rgba(0, 0, 0, 0.25);
+          }
+
+          &::-webkit-outer-spin-button,
+          &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
+        }
+
+        select {
+          font-size: 17px;
+          background: #cacaca;
+          border: 1px solid $color1;
+          border-radius: 10px;
+          padding: 10px 20px;
+        }
+
+        textarea {
+          margin-bottom: 3rem;
+          resize: none;
+          padding: 7px;
+        }
+      }
+    }
+
+    .add {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+
+      &-photo-btn {
+        cursor: pointer;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+        margin-top: 1rem;
+        background-color: #004AAC;
+        color: $base-color1;
         font-size: 22px;
-      }
+        text-wrap: nowrap;
+        border-radius: 5px;
+        border: 2px solid #000;
+        transition: all 500ms ease-in-out;
+        gap: 10px;
 
-      input {
-        font-size: 20px;
-        margin: 0 0 2rem 0;
-        padding: 10px 20px;
-        display: inline-block;
-        border: 1px solid $color1;
-        background: #cacaca;
-        color: $base-color2;
-        border-radius: 10px;
-
-        &::placeholder {
-          color: rgba(0, 0, 0, 0.25);
+        .camera-icon {
+          svg {
+            width: 20px;
+            height: 20px;
+            margin-top: 2px;
+            padding: 3px;
+            background-color: $base-color1;
+            color: #004AAC;
+            border-radius: 5px;
+            transition: all 400ms ease-in-out;
+          }
         }
 
-        &::-webkit-outer-spin-button,
-        &::-webkit-inner-spin-button {
-          -webkit-appearance: none;
-          margin: 0;
+        &:hover {
+          transform: scale(1.05);
+
+          &::before {
+            animation: shine 1.5s ease-in-out infinite;
+          }
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100px;
+          height: 100%;
+          background-image: linear-gradient(120deg,
+              rgba(255, 255, 255, 0) 30%,
+              rgba(255, 255, 255, 0.8),
+              rgba(255, 255, 255, 0) 70%);
+          top: 0;
+          left: -100px;
+          opacity: 0.6;
+        }
+
+        @keyframes shine {
+          0% {
+            left: -100px;
+          }
+
+          60% {
+            left: 100%;
+          }
+
+          to {
+            left: 100%;
+          }
         }
       }
 
-      select {
-        font-size: 17px;
-        background: #cacaca;
-        border: 1px solid $color1;
-        border-radius: 10px;
-        padding: 10px 20px;
-      }
+      &-product-btn {
+        cursor: pointer;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 15px 30px;
+        margin-top: 1rem;
+        background-color: #004AAC;
+        color: $base-color1;
+        font-size: 22px;
+        text-wrap: nowrap;
+        border-radius: 5px;
+        border: 2px solid #000;
+        transition: all 500ms ease-in-out;
+        gap: 10px;
 
-      textarea {
-        margin-bottom: 3rem;
-        resize: none;
-        padding: 7px;
+        .add-icon {
+          svg {
+            width: 1rem;
+            height: 1rem;
+            margin-bottom: 2px;
+            background-color: none;
+            color: $base-color1;
+            border-radius: 5px;
+            transition: all 400ms ease-in-out;
+          }
+        }
+
+        &:hover {
+          transform: scale(1.05);
+
+          &::before {
+            animation: shine 1.5s ease-in-out infinite;
+          }
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100px;
+          height: 100%;
+          background-image: linear-gradient(120deg,
+              rgba(255, 255, 255, 0) 30%,
+              rgba(255, 255, 255, 0.8),
+              rgba(255, 255, 255, 0) 70%);
+          top: 0;
+          left: -100px;
+          opacity: 0.6;
+        }
+
+        @keyframes shine {
+          0% {
+            left: -100px;
+          }
+
+          60% {
+            left: 100%;
+          }
+
+          to {
+            left: 100%;
+          }
+        }
       }
     }
   }
+}
 
-  .add {
+section {
+  .user-profile {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 3rem;
+    margin-top: 5%;
 
-    &-photo-btn {
+    &-icon {
+      border: 4px solid $base-color2;
+      padding: 30px;
+      border-radius: 50%;
+
+      span {
+        svg {
+          width: 100px;
+          height: 100px;
+        }
+      }
+    }
+
+    &-detail {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+
+      p {
+        >span {
+          font-size: 26px;
+        }
+
+        >span+span {
+          font-size: 22px;
+        }
+      }
+    }
+
+    .edit-btn {
       cursor: pointer;
       height: 3rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 20px;
+      padding: 25px 30px 25px 30px;
       margin-top: 1rem;
       background-color: #004AAC;
       color: $base-color1;
@@ -1443,85 +1618,6 @@ footer {
       border: 2px solid #000;
       transition: all 500ms ease-in-out;
       gap: 10px;
-
-      .camera-icon {
-        svg {
-          width: 20px;
-          height: 20px;
-          margin-top: 2px;
-          padding: 3px;
-          background-color: $base-color1;
-          color: #004AAC;
-          border-radius: 5px;
-          transition: all 400ms ease-in-out;
-        }
-      }
-
-      &:hover {
-        transform: scale(1.05);
-
-        &::before {
-          animation: shine 1.5s ease-in-out infinite;
-        }
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        width: 100px;
-        height: 100%;
-        background-image: linear-gradient(120deg,
-            rgba(255, 255, 255, 0) 30%,
-            rgba(255, 255, 255, 0.8),
-            rgba(255, 255, 255, 0) 70%);
-        top: 0;
-        left: -100px;
-        opacity: 0.6;
-      }
-
-      @keyframes shine {
-        0% {
-          left: -100px;
-        }
-
-        60% {
-          left: 100%;
-        }
-
-        to {
-          left: 100%;
-        }
-      }
-    }
-
-    &-product-btn {
-      cursor: pointer;
-      height: 2.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 15px 30px;
-      margin-top: 1rem;
-      background-color: #004AAC;
-      color: $base-color1;
-      font-size: 22px;
-      text-wrap: nowrap;
-      border-radius: 5px;
-      border: 2px solid #000;
-      transition: all 500ms ease-in-out;
-      gap: 10px;
-
-      .add-icon {
-        svg {
-          width: 1rem;
-          height: 1rem;
-          margin-bottom: 2px;
-          background-color: none;
-          color: $base-color1;
-          border-radius: 5px;
-          transition: all 400ms ease-in-out;
-        }
-      }
 
       &:hover {
         transform: scale(1.05);
