--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -389,9 +389,11 @@
         }
     }
 
-    .product-add-container {
-        label{
-            letter-spacing: 0.5px;
+    section {
+        .product-add-container {
+            label {
+                letter-spacing: 0.5px;
+            }
         }
     }
 }
