--- a/src/Responsive/Tablet-Large Tablet/Tablet.scss
+++ b/src/Responsive/Tablet-Large Tablet/Tablet.scss
@@ -462,53 +462,75 @@
         }
     }
 
-    .product-add-container {
+    section {
+        .product-add-container {
 
-        .product-add-title {
-            font-size: 28px;
-        }
-
-        .product {
-            grid-template-columns: repeat(2, 1fr);
-            margin-left: 3rem;
-
-            div {
-                label {
-                    margin-bottom: 14px;
-                }
-
-                select {
-                    font-size: 16px;
-                    padding: 10px 10px;
-                }
-
-                textarea {
-                    margin-bottom: 0;
-                }
+            .product-add-title {
+                font-size: 28px;
             }
-        }
 
-        .add {
-            gap: 1rem;
+            .product {
+                grid-template-columns: repeat(2, 1fr);
+                margin-left: 3rem;
 
-            &-photo-btn {
-                height: 2.5rem;
-                padding: 15px;
-                font-size: 20px;
+                div {
+                    label {
+                        margin-bottom: 14px;
+                    }
 
-                .camera-icon {
-                    svg {
-                        width: 18px;
-                        height: 18px;
+                    select {
+                        font-size: 16px;
+                        padding: 10px 10px;
+                    }
+
+                    textarea {
+                        margin-bottom: 0;
                     }
                 }
             }
 
-            &-product-btn {
-                padding: 15px 25px;
-                margin-top: 0.5rem;
-                font-size: 20px;
-                gap: 0.5rem;
+            .add {
+                gap: 1rem;
+
+                &-photo-btn {
+                    height: 2.5rem;
+                    padding: 15px;
+                    font-size: 20px;
+
+                    .camera-icon {
+                        svg {
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+                }
+
+                &-product-btn {
+                    padding: 15px 25px;
+                    margin-top: 0.5rem;
+                    font-size: 20px;
+                    font-weight: 600;
+                    gap: 0.5rem;
+                }
+            }
+        }
+    }
+
+    section {
+        .user-profile {
+            margin-top: 10%;
+
+            &-detail {
+                p {
+                    >span {
+                        font-size: 22px;
+                    }
+
+                    >span+span {
+                        font-size: 19px;
+                        letter-spacing: 0.5px;
+                    }
+                }
             }
         }
     }
