--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1657,3 +1657,137 @@ section {
     }
   }
 }
+
+.error-container {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #dedede;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &-first {
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      text-align: center;
+      color: #444;
+      margin-bottom: 1rem;
+    }
+
+    .error-404 {
+      margin-bottom: 1rem;
+
+      &-icon {
+        width: 5rem;
+        height: 5rem;
+        color: #555;
+      }
+    }
+
+    .page-not-found {
+      font-size: 30px;
+      font-weight: 600;
+      color: #333;
+    }
+  }
+
+  &-second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .exclamation {
+      color: #222;
+      margin-bottom: 1rem;
+
+      &-icon {
+        width: 3rem;
+        height: 3rem;
+      }
+    }
+
+    h2 {
+      font-size: 26px;
+      font-weight: 500;
+      margin-bottom: 1rem;
+      color: #222;
+    }
+
+    .error-reason {
+      font-size: 1.5rem;
+      margin-left: 1rem;
+    }
+  }
+
+  .exit-btns-from-error-page {
+    width: 50%;
+    margin-top: 3rem;
+    display: flex;
+
+    .go-back-btn {
+      width: 100%;
+      height: 3rem;
+      border-radius: 5px;
+      color: $base-color2;
+      cursor: pointer;
+      position: relative;
+      padding-left: 2rem;
+      margin-right: 2.5rem;
+      animation-name: go-back-btn;
+      animation-duration: 1.5s;
+      animation-iteration-count: infinite;
+      font-size: 18px;
+
+      @keyframes go-back-btn {
+        0% {
+          background-color: #777;
+        }
+
+        100% {
+          background-color: #999;
+        }
+      }
+
+      &-icon {
+        width: 2rem;
+        height: 2rem;
+        position: absolute;
+        left: 5px;
+        bottom: 0.5rem;
+        background-color: $base-color1;
+        border-radius: 50%;
+      }
+    }
+
+    .go-to-home-page-btn {
+      width: 100%;
+      height: 3rem;
+      margin-left: 2.5rem;
+      border-radius: 5px;
+      color: $base-color2;
+      cursor: pointer;
+      position: relative;
+      padding-left: 2.5rem;
+      background-color: #00a870;
+      font-size: 18px;
+
+      &-icon {
+        width: 2rem;
+        height: 2rem;
+        position: absolute;
+        left: 0.5rem;
+        bottom: 0.5rem;
+        background: none;
+      }
+    }
+  }
+}
