--- a/src/Responsive/Tablet-Large Tablet/Tablet.scss
+++ b/src/Responsive/Tablet-Large Tablet/Tablet.scss
@@ -534,4 +534,17 @@
             }
         }
     }
+
+    .error-container {
+        
+        &-second {
+            .error-reason {
+                font-size: 22px;
+            }
+
+            .exit-btns-from-error-page {
+                margin-top: 2.5rem;
+            }
+        }
+    }
 }
