--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -449,7 +449,7 @@ section {
           .slick-track {
             >div {
               >div {
-                .product-add-container {
+                .product-container {
                   width: fit-content;
                   height: fit-content;
                   border: 2px solid #000;
