adding-product-view-page

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1791,3 +1791,87 @@ section {
     }
   }
 }
+
+section {
+  .product-view-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+
+    .product-view-title {
+      font-size: 2rem;
+      text-align: center;
+      margin-top: 3rem;
+    }
+
+    .product-view {
+      display: flex;
+      flex-direction: column;
+
+      &-images {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 2rem;
+        margin-bottom: 5rem;
+
+        span {
+          svg {
+            width: 125px;
+            height: 125px;
+          }
+        }
+
+        .view-more-plus-icon {
+          display: inline-block;
+          width: fit-content;
+          margin-top: 2.5rem;
+          color: #222222;
+
+          svg {
+            width: 50px;
+            height: 50px;
+          }
+        }
+
+        &-more {
+          display: flex;
+          align-items: center;
+          justify-content: start;
+          cursor: pointer;
+          font-size: 1.5rem;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+
+      &-info {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        div {
+          >span {
+            font-size: 22px;
+            font-weight: 600;
+            color: #222;
+          }
+
+          >span+span {
+            font-size: 20px;
+            font-weight: 400;
+          }
+
+          >span+span+span {
+            width: 100%;
+            display: inline-block;
+            border-bottom: 1px solid #444;
+          }
+        }
+      }
+    }
+  }
+}
