--- a/src/Responsive/Mobile/Mobile.scss
+++ b/src/Responsive/Mobile/Mobile.scss
@@ -203,14 +203,6 @@
                 h3 {
                     margin-bottom: 2.5rem;
                 }
-
-                &-title {
-                    span {
-                        svg {
-                            margin-left: 0.5rem;
-                        }
-                    }
-                }
             }
 
             .uswapp-contact-us {
@@ -544,6 +536,45 @@
                     height: 20px;
                     left: 5px;
                     bottom: 14px;
+                }
+            }
+        }
+    }
+
+    section {
+        .product-view-container {
+                   
+            .product-view {
+                &-images {
+                    grid-template-columns: repeat(2, 1fr);
+                    column-gap: 1rem;
+                    row-gap: 5px;
+                    margin-left: 1rem;
+
+                    .view-more-plus-icon {
+                       display: none;
+                    }
+
+                    &-more{
+                        position: static;
+                        font-size: 20px;
+                        letter-spacing: 1px;
+                    }
+                }
+
+                &-info {
+                    margin-left: 1rem;
+
+                    div {
+                        >span {
+                            font-size: 18px;
+                        }
+
+                        >span+span {
+                            font-size: 17px;
+                            line-height: 22px;
+                        }
+                    }
                 }
             }
         }
